<resources>
    <string name="app_name">RecyclerViewLibrary</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_refresh_desc">演示下拉刷新</string>
    <string name="pull_to_refresh_title2">演示Web刷新</string>
    <string name="pull_to_refresh_desc2">演示如网页下拉显示提示信息</string>
    <string name="pull_to_refresh_title1">下拉刷新</string>
    <string name="pull_to_refresh_desc1">演示不同刷新策略</string>
    <string name="web_hint">超强浏览器内核</string>
    <string name="pull_to_refresh_vector">矢量动画刷新头</string>
    <string name="pull_to_refresh_vector_desc">演示矢量图在刷新头中的不同状态</string>
    <string name="process">进度</string>
    <string name="pull_to_refresh_header_vector">矢量刷新动画</string>
    <string name="pull_to_refresh_vector_header_desc">演示矢量动画交替</string>
    <string name="vector_sample">SVG测试</string>
    <string name="vector_sample_desc">演示部分 SVG 动画</string>
    <string name="display_text">展示文本</string>
    <string name="pull_to_refresh_storey">附加视图</string>
    <string name="pull_to_refresh_storey_desc">演示刷新头内添加一层视图</string>
    <string name="swipeCallback">数据适配器</string>
    <string name="adapter_desc">各种扩展数据适配器演示</string>
    <string name="cursor_adapter">CursorAdapter</string>
    <string name="cursor_adapter_desc">演示RecyclerView CursorAdapter 使用</string>
    <string name="drag_adapter">DragAdapter</string>
    <string name="drag_adapter_desc">演示拖动条目信息</string>
    <string name="dynamic_adapter">DynamicAdapter</string>
    <string name="dynamic_adapter_desc">演示动态往任一位置插入条目</string>
    <string name="expand_adapter">ExpandAdapter</string>
    <string name="expand_adapter_desc">演示数据展开</string>
    <string name="filter">演示数据过滤</string>
    <string name="filter_desc">演示使用 Filter 过滤数据</string>
    <string name="header_adapter">HeaderAdapter</string>
    <string name="header_adapter_desc">演示添加顶部或者底部扩展视图</string>
    <string name="select_adapter">SelectAdapter</string>
    <string name="select_adapter_desc">扩展选择模式,单选,多选.</string>
    <string name="tree_adapter">TreeAdapter</string>
    <string name="tree_adapter_desc">演示树形结构数据适配器</string>
    <string name="action_add">添加</string>
    <string name="action_remove">移除</string>
    <string name="permission_denied">权限申请被拒绝</string>
    <string name="no_more_header">当前没有更多列表头!</string>
    <string name="no_more_footer">当前没有更多列表尾!</string>
    <string name="header_text">Header Content</string>
    <string name="add_header">Add Header</string>
    <string name="remove_header">RemoveHeader</string>
    <string name="add_footer">Add Footer</string>
    <string name="remove_footer">Remove Footer</string>
    <string name="add_item">Add Data</string>
    <string name="expandAll">ExpandAll</string>
    <string name="collapseAll">CollapseAll</string>
    <string name="item_add">Add</string>
    <string name="item_remove">Remove</string>
    <string name="random_add">RandomAdd</string>
    <string name="random_remove">RandomRemove</string>
    <string name="add_random_item">创建随机数据</string>
    <string name="no_any_dynamic_item">没有更多添加的控件</string>
    <string name="add_dynamic_item">随机添加一批控件</string>
    <string name="add_text">AddText</string>
    <string name="remove_text">RemoveText</string>
    <string name="drag_adapter1">拖动视图</string>
    <string name="drag_adapter_desc1">演示编辑拖动视图</string>
    <string name="add_channel">添加频道</string>
    <string name="my_channel">我的频道</string>
    <string name="channel_sort_delete">排序/删除</string>
    <string name="complete">完成</string>
    <string name="layout_manager">布局管理器</string>
    <string name="center_layout_manager">CenterLayoutManager</string>
    <string name="center_layout_manager_desc">演示居中排版的 LayoutManager</string>
    <string name="layout_manager_desc">演示一些扩展的 LayoutManager</string>
    <string name="infinite_cycle">Cycle</string>


    <string name="copy_color_value">Copied \"%s\" to clipboard</string>
    <string name="view_pager2_orientation">Orientation</string>
    <string name="disable_user_input">Disable user input</string>
    <string name="label_jump_to">Jump to</string>
    <string name="checkbox_smooth_scroll">Smooth scroll</string>
    <string name="checkbox_rotate">Rotate</string>
    <string name="scroll_me">Scroll here</string>

    <string name="add_new_before">Add new before</string>
    <string name="add_new_after">Add new after</string>
    <string name="remove_page">Remove page</string>
    <string name="no_more_items">没有更多数据了~</string>
    <string name="view_pager">ViewPager</string>
    <string name="view_pager_desc">演示扩展 ViewPager 操作</string>
    <string name="view_pager_fake">ViewPager FakeDrag</string>
    <string name="view_pager_fake_desc">演示代码滚动.</string>
    <string name="cycle_scroll">Cycle</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_desc">演示扩展自 LayoutManager 的 Gallery</string>
    <string name="wheel">WheelView</string>
    <string name="wheel_desc">使用 LayoutManager 实现 wheel</string>

    <string name="select_position_value">Select:%1$d</string>
    <string name="date_value">%1$d 年%2$s月%3$s 日</string>
    <string name="year_value">%1$d年</string>
    <string name="month_value">%1$d月</string>
    <string name="day_value">%1$d日</string>
    <string name="view_pager_banner">Banner</string>
    <string name="view_pager_banner_desc">演示轮播图效果</string>
    <string name="fake_drag_hint">滑动此面板.控制Banner移动</string>
    <string name="sticky">Sticky</string>
    <string name="sticky_sample1">Sticky演示</string>
    <string name="sticky_sample1_desc">演示Sticky常规使用</string>
    <string name="sticky_desc">演示列表粘附效果</string>
    <string name="sticky_sample2">Sticky包装演示</string>
    <string name="sticky_sample2_desc">演示包装数据适配器完成分组效果</string>
    <string name="sticky_sample3">演示Grid Sticky</string>
    <string name="sticky_sample3_desc">演示不同的表格Sticky</string>
    <string name="swipe_adapter1">SwipeAdapter</string>
    <string name="swipe_adapter_desc1">数据适配器侧滑滑出菜单</string>
    <string name="adapter">Adapter</string>
    <string name="pull_to_refresh_recycler_view_title1">RecyclerView 下拉刷新</string>
    <string name="pull_to_refresh_recycler_view_desc">演示下拉刷新上拉自动加载.</string>
    <string name="click_position">点击:%d</string>
    <string name="auto_refresh">自动刷新</string>
    <string name="re_refresh">刷新</string>
    <string name="click_button_position">点击按钮:%d</string>
</resources>
