<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_pager2_orientation"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Spinner
            android:id="@+id/orientationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/disableCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/disable_user_input"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jumpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_jump_to"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Spinner
            android:id="@+id/pageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/smoothScrollCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/checkbox_smooth_scroll"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <com.cz.widget.recyclerview.sample.view.CheckLayout
        android:id="@+id/checkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        app:check_array="@array/viewPagerAnimations"
        android:gravity="center_vertical|start"
        android:orientation="vertical"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>