<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cz.widget.recyclerview.layoutmanager.viewpager.CycleViewPager
        android:id="@+id/cycleViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:pager_autoScrollDuration="3000"
        app:pager_autoScrollInterval="5000"/>

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="64dp"
        android:textColor="@android:color/black"/>


    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/md_grey_200">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_pager2_orientation"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Spinner
                    android:id="@+id/orientationSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/disableCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/disable_user_input"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical|start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jumpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_jump_to"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Spinner
                    android:id="@+id/pageSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/cycleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/cycle_scroll"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <com.cz.widget.recyclerview.sample.view.CheckLayout
                android:id="@+id/checkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                app:check_array="@array/viewPagerAnimations"
                android:gravity="center_vertical|start"
                android:orientation="vertical"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>